2016-02-23  James Youngman  <jay@gnu.org>

	Remove mylist<T>::operator+=(), implementing insert() instead.
	* src/mylist.h (mylist::insert): add insert() method, forwarding
	to std::vector<T>::insert(), as a replacement for
	mylist::operator+=() (and that method is removed).
	(mylist::cbegin): add, forwarding to items_.cbegin().
	(mylist::cend): add, forwarding to items_.cend().
	* src/delta.h (delta::prepend_comments): Implement.
	* src/sf-cdc.cc (sccs_file::cdc): Call mylist::insert() instead of
	the removed mylist<T>::operator+=().  Also use
	delta::prepend_comments() to prepend comments instead of copying
	the old comments, modifying the list and callign set_comments().
	* unit-tests/test_mylist.cc (MylistTest::Catenate::TestBody): use
	the new insert method to perform the concatenation, instead of the
	removed method operator+=.

2016-02-21  James Youngman  <jay@gnu.org>

	Avoid unnecessary for loop in mylist::operator+=(const mylist&).
	* src/mylist.h (mylist): Implement operator+= with a range insert
	on the underlying vector.

	Remove mylist<T>::operator-=(const mylist<T>&).
	* src/mylist.h (mylist): remove mylist<T>::operator-=(const
	mylist<T>&).

	* unit-tests/test_mylist.cc: Remove tests of
	mylist<T>::operator-=(const mylist<T>&).
	* src/sccsfile.h (sccs_file::admin): change the type of
	erase_users from mylist<string> to
	std::unordered_set<std::string>.  This allows the implementation
	to be more efficient without affecting the ordering of the
	resulting user list.
	* src/admin.cc (main): Update the type of erase_users
	accordingly.
	* src/sf-admin.cc (admin): take advantage of the efficiency of
	std::unordered_set<T>::find() when computing the updated
	authorized user list.  Hence we no longer need to call
	mylist<T>::operator-=(const mylist<T>&).

	Delete mylist<T>::add(), preferring push_back() instead.
	* src/mylist.h (mylist): Delete mylist<T>::add() since we prefer
	push_back().
	* unit-tests/test_mylist.cc: Don't use or test .add(), but use or