@@ -90,7 +90,8 @@ public:
       seq_(s), prev_seq_(p),
       have_includes_(!incl.empty()), have_excludes_(!excl.empty()),
       have_ignores_(false),
-      included_(incl), excluded_(excl),
+      included_(incl.cbegin(), incl.cend()),
+      excluded_(excl.cbegin(), excl.cend()),
       mrs_(mrs), comments_(cs),
       inserted_(0u),
       deleted_(0u),
